[package]
name = "moe_priest_td"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "^0.16"
bevy_spine = { path = "bevy_spine" }
bevy_transform_interpolation = "^0.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.dev]
opt-level = 3
