[package]
name = "moe_priest_td"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_log",
    "bevy_ui",
    "bevy_winit",
    "png",
    "symphonia-aac",
    "symphonia-isomp4",
    "wav",
    "wayland",
] }
bevy_spine = { path = "bevy_spine" }
bevy_transform_interpolation = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# disable log in compile time
log = { version = "0", features = ["release_max_level_off"] }
tracing = { version = "0", features = ["release_max_level_off"] }

[profile.release]
strip = true
lto = true
codegen-units = 1

[profile.dev]
opt-level = 3
