[package]
name = "moe_priest"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_log",
    "bevy_ui_picking_backend",
    "bevy_ui_render",
    "bevy_winit",
    "png",
    "symphonia-aac",
    "symphonia-isomp4",
    "wav",
    "wayland",
    "experimental_bevy_ui_widgets",
] }
bevy_spine = { path = "bevy_spine" }
bevy_transform_interpolation = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

# disable log in compile time
log = { version = "0", features = ["release_max_level_off"] }
tracing = { version = "0", features = ["release_max_level_off"] }

# wait for https://github.com/bevyengine/bevy/pull/20323
symphonia-core = "=0.5.4"

[profile.release]
strip = true
lto = true
codegen-units = 1

[profile.dev]
opt-level = 3
