[package]
name = "bevy_auto_scaling"
version = "0.1.4"
edition = "2024"
description = "Auto scale cameras to fit the window."
license = "MIT"
repository = "https://github.com/RuelYasa/bevy_auto_scaling"
readme = "README.md"

include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]


[dependencies.bevy]
version = "0.17.2"
default-features = false
features = [
  "std",
]
