[package]
name = "bevy_spine"
version = "0.10.1"
edition = "2021"
description = "Spine plugin for Bevy utilizing rusty_spine"
homepage = "https://github.com/jabuwu/bevy_spine"
repository = "https://github.com/jabuwu/bevy_spine"
readme = "readme.md"
license-file = "LICENSE"
exclude = ["assets/*"]

[dependencies]
rusty_spine = { path = "../rusty_spine" }
bevy = { version = "0.17", default-features = false, features = [
    "bevy_render",
    "bevy_asset",
    "bevy_sprite_render",
] }
glam = { version = "0", features = ["mint"] }
thiserror = "1"
