[package]
name = "rusty_spine"
version = "0.3.1"
edition = "2021"
description = "Spine runtime for Rust (and wasm!) transpiled from the official C Runtime."
homepage = "https://github.com/jabuwu/rusty_spine"
repository = "https://github.com/jabuwu/rusty_spine"
readme = "readme.md"

[dependencies]
libc = { version = "0", optional = true }
mint = { version = "0", optional = true }

[features]
default = [ "draw_functions", "mint" ]
draw_functions = []
